--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             .hero{width: 100%; height: 100%;}
             .hero_title{margin-top: 100px;  letter-spacing:12;}
             .hero_name{margin-top: 100px;}
+            .hero_text{margin-bottom: 100px;}
 
             /* invite */
             .invite_wrap{width: 100%; height: 100; background-color: #fbfbfb; padding-top: 100px;}
@@ -61,7 +62,7 @@
             <h1 class="hero_title"> 우리결혼합니다</h1><br>
             <h2 class="text_green">12/24</h2><br>
             <h3 class="hero_name"> 유정현 * 이사랑</h3><br>
-            <p>
+            <p class="hero_text">
                 2020.12.24 SAT 12:00 PM<br>
                 소풍컨벤션웨딩 7층 라온제나홀
             </p>
