--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>2모바일 청첩장</title>
+        <title>2모바일 청첩장 / by 안재민</title>
         <style>
             
             *{border: 0px dashed red; margin: 0; padding: 0;}
